2003-02-05  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond.words: add 1

2003-02-04  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdos/AUTHORS.texi: refine.

2003-01-25  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: lyrics-mode update for multiple stanza.
	
	* lilypond.words: add one.

2003-01-23  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Fontify post-notated slurs [-^_][()].
	Fontify bass note in chords, e.g., e in c1/e.
	
2003-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/music-glossary.tely: Dutch updates and
	additions (Arent Storm).

2003-01-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/ambitus.ly:  move file.	

	* lily/include/pitch.hh (class Pitch): make Pitch objects immutable.

	* lily/event.cc (transpose): add tonic property to Key_change_req
	and to Key_engraver.

2003-01-17  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/refman.itely: fix typo.

	* lilypond.words: removed wrong identifiers.

2003-01-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-toevallig.mf: make flat stem shorter 

2003-01-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Fontify post-notated slurs -( and -).

	* lilypond.words: add from Phrasing slur.
	
2003-01-15  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: allow launching multiple ViewPS processes.
	
	* lilypond.words: add from Text markup.

2003-01-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/ossia.ly (texidoc): add comment.

	* input/regression/voice-follower.ly: new file.

	* mf/feta-toevallig.mf: make flat heavier.

	* lily/cluster-engraver.cc: clean up Cluster engraver

	* lily/cluster.cc (brew_molecule): cleaned up Cluster code and
	Engraver. Use Note_column to compute Y positions and deal with
	line break stuff.

2003-01-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/stem.cc: move french-beaming to stem.

2003-01-13  Heikki Junes  <hjunes@cc.hut.fi>
